--- a/index.html
+++ b/index.html
@@ -2,14 +2,12 @@
 <html>
     <head>
         <title>AB Demo</title>
-        <!-- Global site tag (gtag.js) - Google Analytics -->
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130171934-1"></script>
         <script type="text/javascript">
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
          })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-         ga('create', 'UA-130171934-1', {  // TODO - replace the UA tracking ID (above too)!
+         ga('create', 'UA-130171934-1', {  // TODO - replace the UA tracking ID!
             'cookieDomain': 'none'
          });
         </script>
@@ -42,6 +40,8 @@
              }
          ]
      });
+     ga('send', 'pageview');
+
      window.onload = function() {
          ABalytics.applyHtml();
      };
