--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <title>AB Demo</title>
         <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>        
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>   
+        <script src="src/app.js"></script>     
         <script type="text/javascript">
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
