--- a/index.html
+++ b/index.html
@@ -50,5 +50,11 @@
      window.onload = function() {
          ABalytics.applyHtml();
      };
+     window.addEventListener('load', function() {
+        React.render(
+            React.createElement(Greeting, null),
+                document.body
+        );
+})
     </script>
 </html>
