--- a/index.html
+++ b/index.html
@@ -3,7 +3,22 @@
     <head>
         <title>AB Demo</title>
         <script crossorigin src="https://unpkg.com/react@16/umd/react.development.js"></script>
-        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>   
+        <script crossorigin src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"></script>  
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
+        <script type="text/babel">
+          var Greeting = React.createClass({
+            render: function() {
+              return (
+                <p>Hello, React!</p>
+              )
+            }
+          });
+    
+          ReactDOM.render(
+            <Greeting/>,
+            document.getElementById('greeting-div')
+          );
+        </script>         
         <script src="src/app.js"></script>     
         <script type="text/javascript">
          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -48,11 +63,7 @@
      ga('send', 'pageview');
 
      window.onload = function() {
-         ABalytics.applyHtml();
-         React.render(
-            React.createElement(Greeting, null),
-                document.body
-        );         
+         ABalytics.applyHtml();       
      };
     </script>
 </html>
