--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     </head>
 
     <body>
+        <div id="show-react"></div>
         <div class="experiment1_text">
             This content will be replaced by ABalytics
         </div>
-
         <form class="experiment1_button">
             This will be replaced too, with a button for the form
         </form>
