--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     </head>
 
     <body>
-        <div id="show-react" onclick={Greeting}>Show React</div>
+        <button id="show-react" onclick={Greeting}>Show React</button>
         <div class="experiment1_text">
             This content will be replaced by ABalytics
         </div>
