--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </head>
 
     <body>
-        <button id="show-react" onclick="Greeting()">Show React</button>
+        <button id="show-react" onclick="myFunction()">Show React</button>
         <div class="experiment1_text">
             This content will be replaced by ABalytics
         </div>
