--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-core/5.8.34/browser.min.js"></script>
         <script>
                 function myFunction() {
+                    console.log('myFunction')
                     document.getElementById("show-react").style.color = "red";
+                    document.getElementById("show-react").style.backgroundColor = "green";
                 }
         </script>
      
