--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </head>
 
     <body>
-        <button id="show-react" onclick="myFunction()">Show React</button>
+        <form id="show-react" onclick="myFunction()">
+            <h1>Show React!</h1>
+        </form>
         <div class="experiment1_text">
             This content will be replaced by ABalytics
         </div>
