--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
          experiment1: [
              {
                  name: 'variant1',
-                 'experiment1_text': 'Pretty please click the button with sugar on top!',
+                 'experiment1_text': 'Hola. Por Favor presiona el boton!',
                  'experiment1_button':
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
+                       '<input type="button" value="Presiona Aqui!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Gracias!\');">'
              },
              {
                  name: 'variant2',
-                 'experiment1_text': 'You better click that button...',
+                 'experiment1_text': 'Hi. Please press the button',
                  'experiment1_button':
-                       '<input type="button" value="Click me, OR ELSE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'You will be spared.\');">'
+                       '<input type="button" value="Click here" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'Thank you.\');">'
              }
          ]
      });
