--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
          experiment1: [
              {
                  name: 'variant1',
-                 'experiment1_text': 'Pretty please click the button with sugar on top!',
+                 'experiment1_text': 'Click the button and find out what happens next ;)',
                  'experiment1_button':
-                       '<input type="button" value="Click me!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'nice\'); alert(\'Thanks!\');">'
+                       '<input type="button" value="Click Click!" onclick="ga(\'send\', \'event\', \'buttonclick\', \'seductive\'); alert(\'Coolio!\');">'
              },
              {
                  name: 'variant2',
-                 'experiment1_text': 'You better click that button...',
+                 'experiment1_text': 'Good friends click eachother\'s buttons...',
                  'experiment1_button':
-                       '<input type="button" value="Click me, OR ELSE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'You will be spared.\');">'
+                       '<input type="button" value="Come on..." onclick="ga(\'send\', \'event\', \'buttonclick\', \'guilt trip\'); alert(\'Nice...\');">'
              }
          ]
      });
