--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <form class="experiment1_button">
             This will be replaced too, with a button for the form
         </form>
+        <FORM><INPUT TYPE="button" VALUE="Close Window" onClick="window.close()"></FORM<br />
+
     </body>
 
     <script type="text/javascript">
