--- a/index.html
+++ b/index.html
@@ -39,7 +39,14 @@
                  'experiment1_text': 'You better click that button...',
                  'experiment1_button':
                        '<input type="button" value="Click me, OR ELSE" onclick="ga(\'send\', \'event\', \'buttonclick\', \'stern\'); alert(\'You will be spared.\');">'
+             },
+             {
+                 name: 'variant3',
+                 'experiment1_text': 'CLICK TO WIN $1,000,000',
+                 'experiment1_button':
+                       '<input type="button" value="Feeling Lucky?" onclick="ga(\'send\', \'event\', \'buttonclick\', \'greedy\'); alert(\'Work harder in school and your dreams will be fulfilled\');">'
              }
+             
          ]
      });
      ga('send', 'pageview');
